--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <aside class="btnbuy2">
         <button type="submit" class="btn" value="send"id="btnbuy5">Купить</button>
-        <button type="submit" class="btn1"  value="send"id="btnbuy6"><img src="img/coins.png">Купить</button>
+        <button type="submit" class="btn1"  value="send"id="btnbuy6">Купить</button>
     </aside>
 </main>
 <footer>
